Corrected text not wrapping in tweets when there are no spaces.

--- a/public/sass-scripts/tweet.scss
+++ b/public/sass-scripts/tweet.scss
@@ -66,6 +66,7 @@
   font-size: 18px;
   padding-left: 1em;
   padding-right: 1em;
+  overflow-wrap: break-word;
 }
 
 .tweet footer {
